WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60477
[Qt] Tab not working in editing/inserting/typing-tab-designmode-forms.html
https://bugs.webkit.org/show_bug.cgi?id=60477
Summary
[Qt] Tab not working in editing/inserting/typing-tab-designmode-forms.html
Chang Shu
Reported
2011-05-09 08:53:34 PDT
In the above test, type 'tab' should insert tab-space in the form. But it didn't happen.
Attachments
fix patch
(3.14 KB, patch)
2011-05-10 10:54 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2011-05-09 08:54:57 PDT
editing/inserting/typing-tab-designmode.html seems to have the same problem.
Chang Shu
Comment 2
2011-05-10 10:54:40 PDT
Created
attachment 92982
[details]
fix patch
Ryosuke Niwa
Comment 3
2011-05-11 08:34:34 PDT
Comment on
attachment 92982
[details]
fix patch Looks sane to me but I guess someone from Qt port should review it.
Chang Shu
Comment 4
2011-05-11 09:12:18 PDT
Comment on
attachment 92982
[details]
fix patch thanks, guys.
WebKit Commit Bot
Comment 5
2011-05-11 09:54:20 PDT
The commit-queue encountered the following flaky tests while processing
attachment 92982
[details]
: http/tests/misc/favicon-loads-with-icon-loading-override.html
bug 58412
(author:
alice.liu@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2011-05-11 09:59:25 PDT
Comment on
attachment 92982
[details]
fix patch Clearing flags on attachment: 92982 Committed
r86243
: <
http://trac.webkit.org/changeset/86243
>
WebKit Commit Bot
Comment 7
2011-05-11 09:59:29 PDT
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 8
2011-05-11 11:52:09 PDT
http://trac.webkit.org/changeset/86243
might have broken Windows XP Debug (Tests) The following tests are not passing: inspector/debugger/source-frame.html inspector/extensions/extensions.html media/controls-without-preload.html
Chang Shu
Comment 9
2011-05-11 12:14:48 PDT
(In reply to
comment #8
)
>
http://trac.webkit.org/changeset/86243
might have broken Windows XP Debug (Tests) > The following tests are not passing: > inspector/debugger/source-frame.html > inspector/extensions/extensions.html > media/controls-without-preload.html
The patch only touched Qt code.
Ademar Reis
Comment 10
2011-05-16 14:04:04 PDT
Revision
r86243
cherry-picked into qtwebkit-2.2 with commit 614ea61 <
http://gitorious.org/webkit/qtwebkit/commit/614ea61
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug